--- a/place.html
+++ b/place.html
@@ -1,1 +1,51 @@
-<h1 align="center">Place Page</h1>
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+
+    <meta charset="UTF-8">
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Lightning Terms of Service</title>
+
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/1050815452516991109/1069914689674412043/lightning.ico.png"/>
+
+</head>
+
+<body>
+
+    <h1>Place</h1>
+
+    <p>This is the Terms of Service for Lightning. This is for the rules of using our bot. By using Lightning, you agree to the document. Do not copy/plagarize/steal this document.</p>
+
+    <br>
+
+    <br>
+
+    <h2>ToS</h2>
+
+    <p>
+
+        1. You may not find loopholes or work arounds. <br>
+
+        2. You may not abuse the bot in any way. <br>
+
+        3. You may not do scams with the economy system. <br>
+
+        4. You may not use this bot to do anything bad to users or servers. <br>
+
+        5. Only use the bot for it's purpose. <br>
+
+    </p>
+
+    <h6>Lightning 2023</h6>
+
+    <a href="./">Go to Main</a>
+    
+</body>
+
+</html>
